gcc/testsuite/rust/rustc/ui/foreign-unsafe-fn-called.rs
mod test {
    extern {
        pub fn free();
    }
}

fn main() {
    test::free();
// { dg-error ".E0133." "" { target *-*-* } .-1 }
}

